--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -505,6 +505,9 @@ ul.pager{
     }
   }
 }
+[id*="field-video-upload-values"]{
+  tr th{display: none;}
+}
 #GalleryIndividualImages{
   .form-field-name-field-poll-question-video{
     .form-managed-file{
@@ -10038,9 +10041,13 @@ div.node{
         &.field-multiple-drag{
           display: table-cell !important; 
           text-align: center;
+          vertical-align: top;
           a.tabledrag-handle{
             display: inline-block;
-            vertical-align: middle;
+            vertical-align: top;
+            margin: 13px 0 0;
+            padding: 5px;
+            height: 20px;
           }
         }
         .field-type-image .image-widget-data .form-submit[value="Remove"]{
@@ -10051,6 +10058,7 @@ div.node{
   }
   .ftp_browse_field{
     margin: 10px 0 0;
+    position: relative;
   }
 }
 .templates-tab-wrapper{
