ITG-3672 #time 2h #comment theme akamai forms

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12599,3 +12599,33 @@ fieldset#edit-xmlsitemap {
 #views-exposed-form-report-filed-content-page #edit-from-state-wrapper {
   display: none !important;
 }
+
+[id*="itg-akamai-settings"] fieldset,
+[id*="itg-akamai-cache-akamai-section"] fieldset,
+[id*="itg-akamai-cache-akamai-log"] fieldset,
+[id*="itg-akamai-cache-akamai-ccpurge"] fieldset,
+[id*="itg-akamai-cache-akamai-other"] fieldset {
+  border: none;
+}
+[id*="itg-akamai-settings"] fieldset legend,
+[id*="itg-akamai-cache-akamai-section"] fieldset legend,
+[id*="itg-akamai-cache-akamai-log"] fieldset legend,
+[id*="itg-akamai-cache-akamai-ccpurge"] fieldset legend,
+[id*="itg-akamai-cache-akamai-other"] fieldset legend {
+  display: block;
+  background-color: #d9d9d9;
+  padding: 8px 20px;
+  line-height: 28px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 100%;
+}
+[id*="itg-akamai-settings"] fieldset .fieldset-wrapper .form-item-itg-akamai-disabled,
+[id*="itg-akamai-cache-akamai-section"] fieldset .fieldset-wrapper .form-item-itg-akamai-disabled,
+[id*="itg-akamai-cache-akamai-log"] fieldset .fieldset-wrapper .form-item-itg-akamai-disabled,
+[id*="itg-akamai-cache-akamai-ccpurge"] fieldset .fieldset-wrapper .form-item-itg-akamai-disabled,
+[id*="itg-akamai-cache-akamai-other"] fieldset .fieldset-wrapper .form-item-itg-akamai-disabled {
+  margin: 10px 0;
+  padding: 0 30px;
+}
