--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11954,3 +11954,7 @@ fieldset#edit-xmlsitemap{
  .ticket-type-require:after{
    @extend .astrick;
  }
+.cpation-wraper textarea {
+  width: 400px;
+  margin-bottom: 10px;
+}
