--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3327,9 +3327,9 @@
   }
   /*=============Vide Right Section*/
   #block-views-video-landing-header-block .latest_video .photo-list li{ float: left; width:100%; padding:18px 10px; box-sizing: border-box; border-bottom:1px solid #3e3e3e}
-  #block-views-video-landing-header-block .latest_video .photo-list li .tile.GoogleAnalyticsET-processed figure{ margin: 0 0px 0 15px;float: right}
-  #block-views-video-landing-header-block .latest_video .photo-list li .tile.GoogleAnalyticsET-processed p{ font:400 14px/20px "Roboto", sans-serif; color:#b4b4b4}
-  #block-views-video-landing-header-block .latest_video .photo-list li .tile.GoogleAnalyticsET-processed p a{ color:#b4b4b4}
+  #block-views-video-landing-header-block .latest_video .photo-list li .tile figure{ margin: 0 0px 0 15px;float: right}
+  #block-views-video-landing-header-block .latest_video .photo-list li .tile p{ font:400 14px/20px "Roboto", sans-serif; color:#b4b4b4}
+  #block-views-video-landing-header-block .latest_video .photo-list li .tile p a{ color:#b4b4b4}
   #block-views-video-landing-header-block .latest_video .view-header h3{font:500 14px/35px "Roboto", sans-serif; margin-bottom:10px; background:#131313; height:35px; color:#fff; position: relative; border-bottom:1px solid #3b3b3b;padding: 0 10px;}
   #block-views-video-landing-header-block .latest_video .view-header h3 .fa-caret-down{position: absolute;   right: 10px; top: 11px; font-size: 14px;}
   #block-views-video-landing-header-block .latest_video .mCSB_scrollTools .mCSB_draggerRail{ background-color:#100e0f; width:16px;}
@@ -3340,7 +3340,7 @@
   @media (max-width: 1024px) {
     .view-video-landing-header .defalt-bar{ float: left; height: 225px !important;}
     .latest_video { float: left;  width: 500px; margin-bottom:15px;}
-    #block-views-video-landing-header-block .latest_video .photo-list li .tile.GoogleAnalyticsET-processed figure{ width:120px;}
+    #block-views-video-landing-header-block .latest_video .photo-list li .tile figure{ width:120px;}
     #block-views-video-landing-header-block .latest_video .mCSB_scrollTools .mCSB_draggerRail{width:7px;}
     #block-views-video-landing-header-block .latest_video .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ width:3px;}
     #block-views-video-landing-header-block .video-header-right{ padding:15px 15px 0; margin-top:30px;}
