ITG-820 #time 1h #comment resolve ui issues

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11958,3 +11958,9 @@ fieldset#edit-xmlsitemap{
   width: 400px;
   margin-bottom: 10px;
 }
+.itg-mosimage{
+  img:first-child{
+    float: left;
+    margin-right: 10px;
+  }
+}
