resolve ui issues

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12634,3 +12634,12 @@ fieldset#edit-xmlsitemap {
   width: 400px;
   margin-bottom: 10px;
 }
+
+.itg-mosimage img:first-child {
+  float: left;
+  margin-right: 10px;
+}
+
+.edit-image-info {
+  color: #008eb1;
+}
