--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14416,6 +14416,13 @@ span.close_btt {
   text-align: center;
 }
 
+.home-election {
+  margin-bottom: 40px;
+}
+.home-election .social-share li {
+  margin-right: 7px;
+}
+
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
