--- a/sites/all/themes/itg/sass/layout-manager.scss
+++ b/sites/all/themes/itg/sass/layout-manager.scss
@@ -3172,3 +3172,17 @@ img{
         margin-bottom: 0;
     }
 }
+.page-itg-layout-manager-home{
+  .home-election{
+    margin-bottom: 30px;
+    .droppable{
+      min-height: 400px;
+    }
+    .social-share{
+      li{
+        float: left;
+        margin-right: 10px;
+      }
+    }
+  }
+}
