--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -3684,6 +3684,14 @@ span.personal-social-share-links {
   float: left;
 }
 
+div#forgot-field-heading {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+  color: #aaa;
+  margin-bottom: 15px;
+}
+
 /* CSS To Add Zoom Effect on Images */
 @media all and (min-width: 1025px) {
   .zoom-image, #block-itg-front-end-common-related-photo-block #related-photo ul li a,
@@ -4417,12 +4425,17 @@ span.personal-social-share-links {
   right: 0;
   top: 25px;
   margin: 0 auto;
-  width: 20px;
+  width: 25px;
+  height: 25px;
+  background-color: #e5e5e5;
+  border-radius: 50%;
   text-align: center;
   font-size: 12px;
   color: #666;
   font-family: Roboto;
   font-weight: 500;
+  box-sizing: border-box;
+  padding-top: 4px;
 }
 
 .page-cart section.sidebar .block-itg-ads, .page-order section.sidebar .block-itg-ads {
@@ -6959,7 +6972,7 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
     padding: 40px 0;
   }
   .page-user .parent-background, .page-signup .parent-background, .page-forgot-password .parent-background {
-    padding: 30px;
+    padding: 30px 20px;
   }
   .page-user .social-share a, .page-signup .social-share a, .page-forgot-password .social-share a {
     width: 50px;
@@ -6967,6 +6980,54 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
   }
   .page-user .social-share a .fa, .page-signup .social-share a .fa, .page-forgot-password .social-share a .fa {
     width: 50px;
+  }
+
+  .page-signup [id*="itg_sso_reg_multistep_form"] .parent-background {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .parent-background .sign-in-link {
+    padding: 0 10px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .parent-background .sign-in-link .left-block {
+    width: 50%;
+    padding-right: 5px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .parent-background .sign-in-link .rgt-block {
+    width: 50%;
+    padding-left: 5px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .form-row {
+    padding: 0;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .form-row .form-item {
+    margin: 0;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .form-row.email-or-mobile {
+    padding-bottom: 40px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .form-row.email-or-mobile:after {
+    top: auto;
+    bottom: 12px;
+  }
+  .page-signup [id*="itg_sso_reg_multistep_form"] .col-xs-6 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  #itg_user_forgot_password_multistep_form .parent-background {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  #itg_user_forgot_password_multistep_form .parent-background .sign-in-link .signin-link {
+    width: 50%;
+    padding-right: 5px;
+    text-align: left;
+  }
+  #itg_user_forgot_password_multistep_form .parent-background .sign-in-link .signup-link {
+    width: 50%;
+    padding-left: 5px;
+    text-align: right;
   }
 }
 @media all and (max-width: 480px) {
