resolve ui issues

--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -3554,6 +3554,15 @@ div#forgot-field-heading {
     color: #aaa;
     margin-bottom: 15px;
 }
+.page-user{
+  .sso-header{
+    & + #page{
+      .login-wrapper{
+        label{display: none;}
+      }
+    }
+  }
+}
 
 
 
