--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -2743,6 +2743,28 @@ footer .multiple-items-footer i.slick-next {
 .story-section .story-right.photo-story .multiple-photo .slick-current .img-wrapper {
   border: 1px solid #ffc106;
 }
+.story-section .story-right.photo-story .photo-slider .image-caption {
+  position: relative;
+}
+.story-section .story-right.photo-story .photo-slider .image-caption .photo-caption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 10px;
+  background-color: #222;
+  color: #a1a1a1;
+  font-size: 13px;
+  font-family: Roboto;
+}
+.story-section .story-right.photo-story .photo-slider .photo-description {
+  padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+  font-family: Roboto;
+  font-size: 13px;
+  color: #8d8d8d;
+  font-weight: 300;
+}
 .story-section .snap-post {
   padding: 20px 20px 20px 70px;
   border-top: 1px solid #e0e0e0;
