resolve event issues

--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -3692,7 +3692,7 @@ div#forgot-field-heading {
   margin-bottom: 15px;
 }
 
-.page-user .sso-header + #page .login-wrapper label {
+.page-user .sso-header + #page .login-wrapper .form-type-textfield label, .page-user .sso-header + #page .login-wrapper .form-type-password label {
   display: none;
 }
 
