--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -3558,7 +3558,9 @@ div#forgot-field-heading {
   .sso-header{
     & + #page{
       .login-wrapper{
-        label{display: none;}
+        .form-type-textfield, .form-type-password{
+          label{display: none;}
+        }
       }
     }
   }
