--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -5449,7 +5449,41 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
       }
     }
   }
-  
+  .page-sso-change-password{
+    h3{text-align: center; margin: 40px 0 20px;}
+    form#itg-sso-reg-password-form{
+      background: #fbfbfb;
+      margin: 0 auto;
+      max-width: 780px;
+      padding: 20px 100px;
+      .form-submit{
+        background: url(../images/btn-blue.png) no-repeat;
+        height: 41px;
+        width: 170px;
+      }
+      .password-confirm{
+        span.error{display: inline-block;}
+      }
+    }
+  }
+  #sso_email_mobile_form{
+    max-width: 780px;
+    h3{text-align: center; margin: 40px 0 20px;}
+    form{
+      background: #fbfbfb;
+      margin: 0 auto;
+      padding: 20px 100px;
+      label{display: block;}
+      input[type="text"]{
+        width: 100%;
+      }
+      .form-submit{
+        background: url(../images/btn-blue.png) no-repeat;
+        height: 41px;
+        width: 170px;
+      }
+    }
+  }
 
 
 
