--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3394,9 +3394,9 @@
     width: 100%;
     height: 100%;
   }
-  #block-views-video-landing-header-block .video-header-left .video.slick-slider .slick-slide{
+  #block-views-video-landing-header-block .video-header-left .video.slick-slider .slick-slide div.video-iframe-wrapper{
     height: 0;
-    padding-bottom: 18.05%;
+    padding-bottom: 72.2%;
   }
   
   .sso-header + #page{height: auto;}
